# ncx-infra-controller-core

./: .coderabbit.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  Makefile.toml  README.md  STYLE_GUIDE.md  rust-toolchain.toml
crates/agent/: Cargo.toml
crates/agent/src/: command_line.rs  dhcp.rs  dhcp_server_grpc_client.rs  ethernet_virtualization.rs  health.rs  main.rs  nvue.rs
crates/agent/src/containerd/: image.rs
crates/agent/src/health/: bgp.rs
crates/agent/src/tests/: full.rs  test_network_monitor.rs  upgrade.rs
crates/api-core/: Cargo.toml
crates/api-core/src/: api.rs  db_init.rs  ethernet_virtualization.rs  lib.rs  setup.rs
crates/api-core/src/auth/: internal_rbac_rules.rs
crates/api-core/src/cfg/: README.md  file.rs
crates/api-core/src/dhcp/: discover.rs
crates/api-core/src/handlers/: bmc_endpoint_explorer.rs  component_manager.rs  dns.rs  dpu.rs  machine_discovery.rs  machine_interface_address.rs  machine_validation.rs  network_segment.rs  nmxc_browse.rs  vpc.rs  vpc_peering.rs  vpc_prefix.rs
crates/api-core/src/instance/: mod.rs
crates/api-core/src/logging/: setup.rs
crates/api-core/src/machine_validation/: mod.rs
crates/api-core/src/network_segment/: allocate.rs
crates/api-core/src/test_support/: default_config.rs  fixture_config.rs  mod.rs  network_segment.rs
crates/api-core/src/tests/: boot_interface_resolution.rs  client_resolution.rs  dns.rs  dpu_reprovisioning.rs  expected_machine.rs  expected_power_shelf.rs  expected_rack.rs  expected_switch.rs  explored_endpoint_find.rs  explored_managed_host_find.rs  find_by_ids_guards.rs  host_bmc_firmware_test.rs  ib_machine.rs  ib_partition_find.rs  instance_allocate.rs  instance_find.rs  machine_dhcp.rs  machine_discovery.rs  machine_find.rs  machine_interfaces.rs  machine_network.rs  machine_states.rs  machine_validation.rs  mod.rs  network_segment.rs  network_segment_find.rs  nvl_instance.rs  power_shelf_find.rs  power_shelf_health.rs  preingestion_dpu_nic_mode.rs  rack_health.rs  set_primary_dpu.rs  set_primary_interface.rs  site_explorer.rs  sku.rs  static_address_management.rs  switch_find.rs  switch_health.rs  tenant_keyset_find.rs  vpc.rs  (+3 more)
crates/api-model/: Cargo.toml
crates/api-model/src/: allocation_type.rs  attestation.rs  controller_outcome.rs  expected_machine.rs  firmware.rs  hardware_info.rs  health.rs  ib.rs  lib.rs  machine_boot_interface.rs  machine_validation.rs  metadata.rs  network_prefix.rs  predicted_machine_interface.rs  rack.rs  rack_type.rs  redfish.rs
crates/api-model/src/dpa_interface/: mod.rs
crates/api-model/src/extension_service/: mod.rs
crates/api-model/src/ib_partition/: mod.rs
crates/api-model/src/instance/: snapshot.rs
crates/api-model/src/machine/: capabilities.rs  infiniband.rs  machine_id.rs  mod.rs  network.rs  upgrade_policy.rs
crates/api-model/src/network_segment/: mod.rs
crates/api-model/src/power_shelf/: mod.rs
crates/api-model/src/resource_pool/: mod.rs
crates/api-model/src/site_explorer/: mod.rs
crates/api-model/src/switch/: mod.rs
crates/api-model/src/tenant/: identity_config.rs  identity_config_policy.rs  mod.rs
crates/api-model/src/test_support/: managed_host.rs  mod.rs
crates/api-model/src/vpc/: capability.rs  mod.rs
crates/api-web/: Cargo.toml
crates/api-web/src/: ipam.rs  managed_host.rs  nmxc_browser.rs  vpc.rs
crates/api-web/src/tests/: env.rs  explored_endpoint.rs  health.rs  (+3 more)
crates/api-web/templates/: managed_host_individual_table.html  managed_host_show.html  nmxc_browser.html
crates/authn/: Cargo.toml
crates/authn/src/: spiffe_id.rs
crates/bmc-proxy/: Cargo.toml
crates/bmc-proxy/src/: bmc_proxy.rs  config.rs  metrics.rs  setup.rs
crates/bms-dsx-exchange/: Cargo.toml
crates/bms-dsx-exchange/src/: lib.rs
crates/component-manager/: Cargo.toml
crates/component-manager/src/: component_manager.rs  compute_tray_manager.rs  config.rs  nsm.rs  nv_switch_manager.rs  power_shelf_manager.rs  psm.rs  rms.rs  test_support.rs
crates/config-version/: Cargo.toml
crates/config-version/src/: lib.rs
crates/dhcp/: Cargo.toml
crates/dhcp-server/: Cargo.toml
crates/dhcp-server/proto/: dhcp_server_control.proto
crates/dhcp-server/src/: grpc_server.rs  main.rs  packet_handler.rs  vendor_class.rs
crates/dhcp/src/: lib.rs  machine.rs  mock_api_server.rs  vendor_class.rs
crates/dhcp/tests/: booturl.rs  lease4_hook_test.rs  multithreaded_kea_test.rs
crates/dns/: Cargo.toml
crates/dns/src/: lib.rs
crates/dsx-exchange-consumer/: Cargo.toml
crates/dsx-exchange-consumer/src/: health_updater.rs  main.rs  messages.rs
crates/firmware/: Cargo.toml
crates/firmware/src/: defaults.rs
crates/health/: Cargo.toml
crates/health/src/: main.rs  sharding.rs
crates/host-support/: Cargo.toml
crates/host-support/src/: agent_config.rs  dpa_cmds.rs  hardware_enumeration.rs  lib.rs
crates/ib-fabric/: Cargo.toml
crates/ib-fabric/src/: errors.rs  lib.rs  metrics.rs
crates/ipxe-renderer/: Cargo.toml  templates.yaml
crates/ipxe-renderer/src/: lib.rs
crates/kms-provider/: Cargo.toml
crates/machine-controller/: Cargo.toml
crates/machine-controller/src/: boot_interface.rs  context.rs  handler.rs
crates/mqttea/: Cargo.toml
crates/mqttea/tests/: errors.rs  stats.rs
crates/network/: Cargo.toml
crates/network/src/: base_mac.rs  lib.rs  virtualization.rs
crates/pxe/: Cargo.toml
crates/pxe/src/: config.rs  rpc_error.rs
crates/rack/: Cargo.toml
crates/rack/src/: firmware_update.rs  lib.rs  rms_client.rs  rms_node_type.rs
crates/rvs/: Cargo.toml
crates/rvs/doc/: example_config.toml
crates/rvs/src/: config.rs  ctx.rs  error.rs  lib.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: credentials.rs  forge_vault.rs
crates/ssh-console/: Cargo.toml
crates/ssh-console/src/: ssh_cert_parsing.rs
crates/test-harness/: Cargo.toml
crates/test-harness/src/: asset.rs  builder.rs  lib.rs  machine.rs  machine_dpu.rs  machine_host.rs  managed_host.rs  prelude.rs  resource_pool.rs
crates/tls/: Cargo.toml
crates/tls/src/: client_config.rs  default.rs  dummy_tls_verifier.rs
(+1693 files in other folders)
