#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[workspace]
resolver = "2"
members = ["crates/*", "crates/libnmxc/tests"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
license-file = "LICENSE"
authors = ["NVIDIA Carbide Engineering <carbide-dev@exchange.nvidia.com>"]

[workspace.dependencies]
clap = { version = "4", features = ["derive", "env"] }
libredfish = { git = "https://github.com/NVIDIA/libredfish.git", tag = "v0.44.4" }
librms = { git = "https://github.com/NVIDIA/nv-rms-client.git", tag = "v0.0.13" }
ansi-to-html = "0.2.2"

tokio = { version = "1", features = ["full", "tracing"] }
tokio-rustls = { version = "0.26" }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }

tonic = { version = "0.14", features = ["tls-ring"] }
strum = "0.28.0"
strum_macros = "0.28.0"

hyper = { version = "^1" }
hyper-rustls = { version = "^0.27" }
hyper-timeout = { version = "^0.5" }
hyper-util = { version = "^0.1" }

rustls = { version = "0.23.16", features = ["aws_lc_rs"] }
rustls-pki-types = "1.10.0"
sqlx = { version = "0.9" }
sqlx-core = { version = "0.9" }
sqlx-macros-core = { version = "0.9" }

opentelemetry = { version = "0.31.0", features = ["logs"] }
opentelemetry_sdk = { version = "0.31.0", features = ["logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31.1", features = ["metrics"] }
opentelemetry-prometheus = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
# tracing-opentelemetry 0.29.0 seems to correspond to opentelemetry 0.28.0, confusingly enough.
tracing-appender = "0.2.4"
tracing-opentelemetry = "0.32.1"

# NV-Redfish
nv-redfish = { version = "0.10.0" }

########
# MARK: - Pinned packages that we can't upgrade due to conflicts or just bugs
########

# pinning p256:
# p256 v0.14 is needed to work with `rand`/`rand_core` 0.10.
p256 = { version = "0.14.0-rc.7", features = ["pem"] }

########
# MARK: - Versions common for the rest of the codebase
########

aes-gcm = "0.10"
anyhow = "1.0"
arc-swap = "1.6"
askama = "0.16.0"
askama_escape = "0.16"
asn1-rs = "0.7.0"
assert-json-diff = "2.0"
async-trait = "0.1.88"
axum = "0.8.4"
axum-client-ip = "1.1.3"
axum-extra = "0.12"
axum-response-cache = "0.4"
axum-server = "0.8"
axum-template = { version = "3.0" }
backon = "1.5.2"
base64 = "0.22.1"
blake3 = "1.4"
byteorder = "1.5.0"
bytes = "^1"
byte-unit = "5.1.6"
cargo_metadata = "0.9.1"
casbin = "2.0"
chrono = "0.4"
clap_complete = "4.5.58"
clap_mangen = "0.3"
colored = "3.1.1"
color-eyre = "0.6.5"
const_format = "0.2.26"
containerd-client = "0.9"
criterion = "0.8"
crossterm = "0.29.0"
crypto-bigint = "0.7.0-rc.9"
csv = "1.3.1"
ctor = "1.0.1"
dashmap = "6.1.0"
data-encoding = "2.9.0"
derive_builder = "0.20.2"
dhcproto = "0.15.0"
diff = "0.1"
domain = "0.12.0"
duration-str = "0.21.0"
efivar = "2.0.0"
eyre = "0.6.12"
figment = "0.10.16"
flate2 = "1.0.30"
fmt = "0.1.0"
form_urlencoded = "1"
futures = { default-features = false, version = "0.3" }
futures-util = "0.3.31"
getopts = "0.2.21"
glob = "0.3.3"
governor = "0.10.1"
gtmpl = "0.7.1"
gtmpl_derive = "0.5.0"
gtmpl_value = "0.5.1"
heck = "0.5.0"
hex = "0.4.3"
hickory-proto = "0.26.1"
hickory-resolver = "0.26.1"
hickory-server = "0.26.1"
hkdf = "0.13.0"
hostname = "0.4"
http = "1.3.1"
http-body = "1.0"
http-body-util = "^0.1"
humantime = "2.1.0"
humantime-serde = "1.1"
indoc = "2.0.6"
ipnet = "2"
ipnetwork = "0.21.0"
itertools = "0.14"
jemalloc_pprof = "0.8"
jsonwebtoken = "10.2.0"
k8s-openapi = "0.27.0"
kube = { version = "3.0.0", default-features = false }
lazy_static = "1.5.0"
libc = "0.2.176"
libfuzzer-sys = "0.4"
libudev = "0.3"
local-ip-address = "0.6.3"
log = "0.4.19"
lru = "0.18.0"
mac_address = "1.1"
md5 = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
mime = "0.3"
mockall = "0.14.0"
mockito = "1.7.0"
moka = { version = "0.12", features = ["future"] }
names = { default-features = false, version = "0.14.0" }
netlink-packet-route = "=0.19"
nix = "0.31.2"
nonempty = "0.12.0"
nonzero_ext = "0.3.0"
notify = "8.2.0"
num_cpus = "1.16.0"
oauth2 = { default-features = false, version = "5" }
octseq = "0.6.1"
oid-registry = "0.8"
once_cell = "1.19"
pin-project-lite = "0.2"
pkcs1 = "0.7.5"
prettyplease = "0.2.30"
prettytable-rs = { default-features = false, version = "0.10" }
procfs = "0.18"
proc-macro2 = { default-features = false, version = "1.0.92" }
prometheus = "0.14.0"
prost = "0.14.3"
prost-build = "0.14.3"
prost-types = "0.14.3"
pwhash = "1.0.0"
quick-xml = "0.39"
quote = { default-features = false, version = "1.0" }
rand = "0.10"
rand_core = "0.10"
ratatui = "0.30.0"
rcgen = "0.14.7"
regex = "1.11.2"
reqwest = { default-features = false, version = "0.13.3" }
resolv-conf = "0.7.0"
ringbuf = "0.5.0"
rsa = "0.9.9"
rtnetlink = "0.21"
rumqttc = { default-features = false, version = "0.25" }
russh = "0.61.1"
rustc-hash = "2.1.1"
rustls-pemfile = "2.2.0"
serde = "1.0.228"
serde_derive = "1"
serde_json = "1.0"
serde_regex = "1.1.0"
serde_with = "3.12.0"
serde_yaml = "0.9"
serial_test = "3"
sha2 = "0.11"
similar = "3.1.0"
size = "0.5.0"
smbios-lib = "0.9.2"
socket2 = "0.6.1"
strip-ansi-escapes = "0.2.1"
surge-ping = "0.8.1"
syn = { default-features = false, version = "2.0" }
tar = "0.4.40"
temp-dir = "0.2.0"
tempfile = "3.8"
tera = "1.20"
test-cdylib = "1.1.0"
thiserror = "2.0.14"
tikv-jemallocator = "0.6.1"
time = "0.3.36"
tokio-socks = "0.5.1"
tokio-test = "0.4"
toml = "1.1.2"
toml_edit = "0.25.11"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "0.14"
tower = "0.5"
tower-http = "0.6"
tower-layer = "0.3"
tower-service = "0.3.2"
tower-test = "0.4"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3"
tryhard = "0.5.1"
tss-esapi = "7.5.0"
typed-builder = "0.23.2"
uname = "0.1"
url = "2"
urlencoding = "2.1"
uuid = "1.17.0"
uzers = "0.12.1"
vaultrs = "0.8"
version-compare = "0.2.1"
wait-timeout = "0.2.1"
walkdir = "2.5.0"
x509-parser = "0.18.1"
zeroize = { version = "1", features = ["derive"] }
zip = { version = "8.6", default-features = false }
jsonpath-rust = "1.0.4"

[profile.release]
debug = "line-tables-only"
debug-assertions = true    # Add some extra assurance during development
overflow-checks = true     # Add some extra assurance during development

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
redundant_clone = "warn"
large_stack_arrays = "warn"
unused_async = "warn"
