#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-api-core"
version = "0.0.1"
edition.workspace = true
description = "Carbide API service implementation (Api/Forge, handlers, server bootstrap)"
license.workspace = true
authors.workspace = true

[lib]
name = "carbide_api_core"

[dependencies]
# External dependencies. PLEASE KEEP ALPHABETIZED ORDER.
bmc-vendor = { path = "../bmc-vendor" }
carbide-api-model = { path = "../api-model", default-features = false }
carbide-api-db = { path = "../api-db", default-features = false }
carbide-authn = { path = "../authn" }
carbide-dpa = { path = "../dpa" }
carbide-dpa-manager = { path = "../dpa-manager" }
carbide-dpf = { path = "../dpf" }
carbide-firmware = { path = "../firmware" }
carbide-health-metrics = { path = "../health-metrics" }
carbide-health-report = { path = "../health-report" }
carbide-host-support = { path = "../host-support", default-features = false }
carbide-ib-fabric = { path = "../ib-fabric" }
carbide-ib-partition-controller = { path = "../ib-partition-controller" }
carbide-ipmi = { path = "../ipmi" }
carbide-ipxe-renderer = { path = "../ipxe-renderer" }
carbide-libmlx = { path = "../libmlx" }
carbide-machine-controller = { path = "../machine-controller" }
carbide-measured-boot = { path = "../measured-boot", features = ["sqlx"] }
carbide-metrics-utils = { path = "../metrics-utils" }
carbide-mqtt-common = { path = "../mqtt-common" }
carbide-network = { path = "../network", features = ["sqlx"] }
carbide-network-segment-controller = { path = "../network-segment-controller" }
carbide-nvlink-manager = { path = "../nvlink-manager" }
carbide-power-shelf-controller = { path = "../power-shelf-controller" }
carbide-preingestion-manager = { path = "../preingestion-manager" }
carbide-rack = { path = "../rack" }
carbide-rack-controller = { path = "../rack-controller" }
carbide-redfish = { path = "../redfish" }
carbide-rpc = { path = "../rpc", features = ["sqlx", "model"] }
carbide-rpc-utils = { path = "../rpc-utils" }
carbide-secrets = { path = "../secrets" }
carbide-site-explorer = { path = "../site-explorer" }
carbide-spdm-controller = { path = "../spdm-controller" }
carbide-state-controller-common = { path = "../state-controller-common" }
carbide-switch-controller = { path = "../switch-controller" }
carbide-utils = { path = "../utils", features = ["sqlx"] }
carbide-uuid = { path = "../uuid", features = ["sqlx"] }
carbide-version = { path = "../version" }
carbide-vpc-prefix-controller = { path = "../vpc-prefix-controller" }
component-manager = { path = "../component-manager" }
config-version = { path = "../config-version", features = ["sqlx"] }
dns-record = { path = "../dns-record" }
libnmxc = { path = "../libnmxc" }
logfmt = { path = "../logfmt" }
mqttea = { path = "../mqttea" }
nras = { path = "../nras" }
spancounter = { path = "../spancounter" }
state-controller = { path = "../state-controller" }
sqlx-query-tracing = { path = "../sqlx-query-tracing" }

# External dependencies. PLEASE KEEP ALPHABETIZED ORDER.
arc-swap = { workspace = true }
asn1-rs = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["http2"] }
base64 = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
casbin = { workspace = true, features = ["glob"] }
chrono = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
data-encoding = { workspace = true }
duration-str = { workspace = true }
eyre = { workspace = true }
figment = { workspace = true, features = ["env", "toml"] }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true }
ipnetwork = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
lazy_static = { workspace = true }
libredfish = { workspace = true }
librms = { workspace = true }
mac_address = { workspace = true }
num_cpus = { workspace = true }
nv-redfish = { workspace = true }
opentelemetry = { workspace = true, features = ["logs"] }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry-prometheus = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true, features = [
  "semconv_experimental",
] }
opentelemetry_sdk = { workspace = true, features = [
  "logs",
  "rt-tokio",
  "spec_unstable_metrics_views",
  "testing",
] }
pkcs1 = { workspace = true }
p256 = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "rustls",
  "stream",
] }
rsa = { workspace = true }
rumqttc = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "tls-rustls",
  "mac_address",
  "ipnetwork",
  "uuid",
  "migrate",
  "postgres",
  "chrono",
  "macros",
  "json",
] }
strum = { workspace = true }
temp-dir = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = [
  "add-extension",
  "auth",
  "normalize-path",
] }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "local-time",
] }
tss-esapi = { workspace = true, optional = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
x509-parser = { workspace = true, features = ["verify"] }

[features]
default = ["linux-build"]
linux-build = ["tss-esapi"]
# Exposes the `tests::common` fixtures (which build a real `Api`) to other crates — notably
# `carbide-api-web`, whose admin-UI tests need them. Pulls in the test-support features of the
# service crates the fixtures use, plus the codegen/cert helpers they need. NOT enabled in normal
# builds (resolver v2 keeps it out of the production `carbide-api` binary); only `carbide-api-web`'s
# dev-dependency turns it on.
test-support = [
  "carbide-api-model/test-support",
  "carbide-ib-fabric/test-support",
  "carbide-machine-controller/test-support",
  "carbide-nvlink-manager/test-support",
  "carbide-rack/test-support",
  "carbide-redfish/test-support",
  "carbide-rpc/test-support",
  "carbide-secrets/test-support",
  "carbide-site-explorer/test-support",
  "carbide-utils/test-support",
  "state-controller/test-support",
]

[build-dependencies]
carbide-version = { path = "../version" }

[dev-dependencies]
# External dependencies. PLEASE KEEP ALPHABETIZED ORDER.
carbide-api-model = { path = "../api-model", default-features = false, features = [
  "test-support",
] }
carbide-ib-fabric = { path = "../ib-fabric", features = ["test-support"] }
carbide-machine-controller = { path = "../machine-controller", features = [
  "test-support",
] }
carbide-macros = { path = "../macros" }
carbide-nvlink-manager = { path = "../nvlink-manager", features = [
  "test-support",
] }
carbide-rack = { path = "../rack", features = ["test-support"] }
carbide-redfish = { path = "../redfish", features = ["test-support"] }
carbide-rpc = { path = "../rpc", features = ["model", "sqlx", "test-support"] }
carbide-secrets = { path = "../secrets", features = ["test-support"] }
carbide-site-explorer = { path = "../site-explorer", features = [
  "test-support",
] }
carbide-sqlx-testing = { path = "../sqlx-testing", default-features = false }
carbide-test-support = { path = "../test-support" }
carbide-utils = { path = "../utils", features = ["test-support"] }
prometheus-text-parser = { path = "../prometheus-text-parser" }
state-controller = { path = "../state-controller", features = ["test-support"] }

# External dependencies. PLEASE KEEP ALPHABETIZED ORDER.
const_format = { workspace = true }
ctor = { workspace = true }
figment = { workspace = true, features = ["env", "test", "toml"] }
mockito = { workspace = true }
prost = { workspace = true }
rcgen = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
