#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-api-model"
version = "0.0.0"
edition.workspace = true
description = "Domain models for carbide-api"
license.workspace = true
authors.workspace = true

[lib]
name = "model"

[dependencies]
# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
bmc-vendor = { path = "../bmc-vendor" }
config-version = { path = "../config-version", features = ["sqlx"] }
carbide-libmlx-model = { path = "../libmlx-model" }
carbide-network = { path = "../network", features = ["sqlx"] }
carbide-version = { path = "../version" }
carbide-health-report = { path = "../health-report" }
carbide-ipxe-renderer = { path = "../ipxe-renderer" }
carbide-utils = { path = "../utils", features = ["sqlx"] }
carbide-uuid = { path = "../uuid", features = ["sqlx"] }
dns-record = { path = "../dns-record" }
libnmxm = { path = "../libnmxm" }
nras = { path = "../nras" }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.

#these are alphabetized
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
duration-str = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
ipnetwork = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
lazy_static = { workspace = true }
mac_address = { features = ["serde"], workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde_regex = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "tls-rustls",
  "mac_address",
  "ipnetwork",
  "uuid",
  "migrate",
  "postgres",
  "chrono",
  "macros",
  "json",
] }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { features = ["v4", "serde"], workspace = true }
version-compare = { workspace = true }
tokio = { workspace = true }
#these are alphabetized

[features]
test-support = []

[build-dependencies]
carbide-version = { path = "../version" }

[dev-dependencies]
carbide-macros = { path = "../macros" }
carbide-sqlx-testing = { path = "../sqlx-testing", default-features = false }
carbide-secrets = { path = "../secrets" }
carbide-test-support = { path = "../test-support" }
lazy_static = { workspace = true }
p256 = { workspace = true }
prost = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
