#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-authn"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Helpers for interacting with TLS authentication, client certs, SPIFFE, etc."

[lib]
name = "carbide_authn"

[dependencies]
thiserror = { workspace = true }
x509-parser = { workspace = true }
serde = { workspace = true, features = ["derive"] }
hyper = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
carbide-test-support = { path = "../test-support" }

[lints]
workspace = true
