[package]
name = "bms-dsx-exchange"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
carbide-test-support = { path = "../test-support" }

[lints]
workspace = true
