#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "component-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
carbide-api-db = { path = "../api-db", default-features = false }
carbide-api-model = { path = "../api-model" }
carbide-rack = { path = "../rack", default-features = false }
carbide-redfish = { path = "../redfish" }
carbide-secrets = { path = "../secrets" }
carbide-uuid = { path = "../uuid" }
chrono = { workspace = true }
libredfish = { workspace = true }
librms = { workspace = true }
mac_address = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
prost = { workspace = true }
prost-types = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
carbide-api-test-helper = { path = "../api-test-helper" }
carbide-macros = { path = "../macros" }
carbide-sqlx-testing = { path = "../sqlx-testing" }
carbide-test-support = { path = "../test-support" }
uuid = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[lints]
workspace = true
