#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-dhcp-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
# TODO: rename to carbide-dhcp-server
name = "forge-dhcp-server"
path = "src/main.rs"

[dependencies]

# [local-dependencies]
carbide-tls = { path = "../tls" }
logfmt = { path = "../logfmt" }
carbide-rpc = { path = "../rpc" }
carbide-rpc-utils = { path = "../rpc-utils" }
carbide-uuid = { path = "../uuid" }

serde_yaml = { workspace = true }
serde = { features = ["derive"], workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
ipnetwork = { workspace = true }
clap = { features = ["derive"], workspace = true }
dhcproto = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = [
  "env-filter",
  "local-time",
], workspace = true }
thiserror = { workspace = true }
lru = { workspace = true }
socket2 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
carbide-test-support = { path = "../test-support" }

[build-dependencies]
tonic-prost-build = "0.14"

[lints]
workspace = true
