[package]
name = "carbide-dhcp"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "dhcp"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { workspace = true }
derive_builder = { workspace = true }
eyre = { workspace = true }
hyper = { workspace = true, features = ["http2"] }
hyper-util = { workspace = true, features = ["tokio"] }
http-body-util = { workspace = true }
ipnetwork = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
mac_address = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }

# [local-dependencies]
carbide-rpc = { path = "../rpc" }
carbide-tls = { path = "../tls" }
metrics-endpoint = { path = "../metrics-endpoint" }

[dev-dependencies]
eyre = { workspace = true }
dhcproto = { workspace = true }
serde_json = { workspace = true }
test-cdylib = { workspace = true }
tempfile = { workspace = true }
carbide-rpc = { path = "../rpc" }
carbide-test-support = { path = "../test-support" }
prometheus = { workspace = true }

[build-dependencies]
cbindgen = "*"
cc = "1.0"

[lints]
workspace = true
